stderr
HikerTest.java:16: error: ';' expected
            int currentNumber=i+1
                                 ^
1 error
